--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_CONNECT =mongodb+srv://ankitjhajhariya018:Jhajhariya19@cluster0.brbr6om.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_CONNECT =
 JWT_SECRET=JaatInSide123
